Unit02:: following updates (major: module)
- Added JScripts for example 11 and 12.
- Made modifications to previous scripts to use as modules.
- Added package.json to handle modules and to avoid related warnings when executing as simplejs file while importing from other files.

--- a/unit02/index.html
+++ b/unit02/index.html
@@ -437,6 +437,11 @@
                     <span class="answer">Solution: </span>
                     <p>No, since 6 and 4 are not co-prime.</p>
                     <p>36 is divisible by 6 as well as 4 but it is not divisible by 24.</p>
+                    <hr>
+                    <div class="srcFile">
+                        <a href="example011.js" target="_blank" class="programLink">./example011.js</a>
+                        <pre><code class="language-javascript"></code></pre>
+                    </div>
                 </div>
             </div>  <!-- example -->
             <div class="example">
@@ -450,8 +455,29 @@
                     <p>The sum of the digits in given number is 36, which is divisible by 3. So, the give number is divisible by 3.</p>
                     <p>The number formed by the last 3-digits of the given number is 744, which is divisible by 9. So, the given number is divisible by 8.</p>
                     <p>Thus, the given number is divisible by both 3 and 8, where 3 and 8 are co-prime. So, it is divisible by $3 \times 8$, i.e. 24.</p>
+                    <hr>
+                    <div class="srcFile">
+                        <a href="example012.js" target="_blank" class="programLink">./example012.js</a>
+                        <pre><code class="language-javascript"></code></pre>
+                    </div>
                 </div>
             </div>  <!-- example -->
+            
+            <h3>Supporting scripts:</h3>
+            <div class="srcFile">
+                <a href="package.json" target="_blank" class="programLink">./package.json</a>
+                <pre><code class="language-json"></code></pre>
+            </div>
+            <hr>
+            <div class="srcFile">
+                <a href="divisibility.js" target="_blank" class="programLink">./divisibility.js</a>
+                <pre><code class="language-javascript"></code></pre>
+            </div>
+            <hr>
+            <div class="srcFile">
+                <a href="supporting.js" target="_blank" class="programLink">./supporting.js</a>
+                <pre><code class="language-javascript"></code></pre>
+            </div>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.9.0/build/highlight.min.js"></script>
