Unit02:: example13 completed

--- a/unit02/index.html
+++ b/unit02/index.html
@@ -7,19 +7,19 @@
     <script>
         window.MathJax = {
             tex: {
-            inlineMath: [['$', '$'], ['\\(', '\\)']], // Explicitly include $...$
-            displayMath: [['$$', '$$'], ['\\[', '\\]']]
-          },
-          options: {
-              skipHtmlTags: ['script', 'noscript', 'style', 'textarea', 'pre','code','annotation', 'annotation-xml'],
-              processEscapes: true
-          }
+                inlineMath: [['$', '$']], // Explicitly include $...$
+                displayMath: [['$$', '$$']]
+            },
+            options: {
+                skipHtmlTags: ['script', 'noscript', 'style', 'textarea', 'pre','code','annotation', 'annotation-xml'],
+                processEscapes: true
+            }
         };
-        </script>
+    </script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="../unitCommonStyles.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.9.0/build/styles/default.min.css">    
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.9.0/build/styles/default.min.css">
 </head>
 <body>
     <div id="unit">
@@ -53,7 +53,7 @@
                 <div class="ProblemSolution">
                     <span class="answer">Solution: </span>
                     <p>Product of unit's digits in given numbers = $(6 \times 7 \times 9 \times 2) = 756$.</p>
-                    <p>$\therefore$ Unit digit in the given product is 6.</p>
+                    <p>&therefore; Unit digit in the given product is 6.</p>
                     <hr>
                     <div class="srcFile">
                         <a href="example001.js" target="_blank" class="programLink">./example001.js</a>
@@ -69,15 +69,15 @@
                 <div class="ProblemSolution">
                     <span class="answer">Solution: </span>
                     <p>Clearly, unit digit in $3^4$ is 1.</p>
-                    <p>$\therefore$ Unit digit in $3^{64}$ is 1.</p>
-                    <p><b>$\therefore$ Unit digit in $3^{67}$ is 7.</b> [$\because$ Unit digit in $1 \times 3 \times 3 \times 3$ is 7]</p>
+                    <p>&therefore; Unit digit in $3^{64}$ is 1.</p>
+                    <p><b>&therefore; Unit digit in $3^{67}$ is 7.</b> [$\because$ Unit digit in $1 \times 3 \times 3 \times 3$ is 7]</p>
                     <p>Clearly, unit digit in every power of 6 is 6.</p>
-                    <p><b>$\therefore$ Unit digit in $6^{39}$ is 6.</b></p>
+                    <p><b>&therefore; Unit digit in $6^{39}$ is 6.</b></p>
                     <p>Clearly, unit digit in $7^4$ is 1.</p>
-                    <p>$\therefore$ Unit digit in $7^{52}$ is 1.</p>
-                    <p><b>$\therefore$ Unit digit in $7^{53}$ is 7.</b> [$\because$ Unit digit in $1 \times 7$ is 7]</p>
+                    <p>&therefore; Unit digit in $7^{52}$ is 1.</p>
+                    <p><b>&therefore; Unit digit in $7^{53}$ is 7.</b> [$\because$ Unit digit in $1 \times 7$ is 7]</p>
 
-                    <p>$\therefore$ Unit digit in given product = Unit digit in $(7 \times 6 \times 7)$ = 4</p>
+                    <p>&therefore; Unit digit in given product = Unit digit in $(7 \times 6 \times 7)$ = 4</p>
                     <hr>
                     <p><b>Explanation:</b></p>
                     <p>We have a method to find the unit digit of $x^y$ without calculating the entire value. It relies on the cyclical patterns of unit digits when numbers are raised to different powers. Here's a breakdown:</p>
@@ -241,16 +241,16 @@
                         <li>Clearly, $16 > \sqrt{241}$.
                             <p>Prime numbers less than 16 are 2, 3, 5, 7, 11, 13.</p>
                             <p>241 is not divisible by any of them.</p>
-                            <p>$\therefore$ 241 is a prime number.</p>
+                            <p>&therefore; 241 is a prime number.</p>
                         </li>
                         <li>Clearly, $19 > \sqrt{337}$.
                             <p>Prime numbers less than 19 are 2, 3, 5, 7, 11, 13, 17.</p>
                             <p>337 is not divisible by any of them.</p>
-                            <p>$\therefore$ 337 is a prime number.</p></li>
+                            <p>&therefore; 337 is a prime number.</p></li>
                         <li>Clearly, $20 > \sqrt{391}$.
                             <p>Prime numbers less than 20 are 2, 3, 5, 7, 11, 13, 17, 19.</p>
                             <p>391 is divisible by 17.</p>
-                            <p>$\therefore$ 391 is not a prime number.</p></li>
+                            <p>&therefore; 391 is not a prime number.</p></li>
                     </ol>
                     <hr>
                     <div class="srcFile">
@@ -358,10 +358,10 @@
                     <span class="answer">Solution: </span>
                     <ol type="i">
                         <li>The number formed by the last two digits in the given number is 94, which is not divisible by 4.
-                            <p>$\therefore$ 67920594 is not divisible by 4.</p>
+                            <p>&therefore; 67920594 is not divisible by 4.</p>
                         </li>
                         <li>The number formed by the last two digits in the given number is 72, which is divisible by 4.
-                            <p>$\therefore$ 618703572 is divisible by 4.</p>
+                            <p>&therefore; 618703572 is divisible by 4.</p>
                         </li>
                     </ol>
                     <hr>
@@ -388,10 +388,10 @@
                     <span class="answer">Solution: </span>
                     <ol type="i">
                         <li>The number formed by the last three digits in the given number is 542, which is not divisible by 8.
-                            <p>$\therefore$ 98016542 is not divisible by 8.</p>
+                            <p>&therefore; 98016542 is not divisible by 8.</p>
                         </li>
                         <li>The number formed by the last three digits in the given number is 304, which is divisible by 8.
-                            <p>$\therefore$ 106598304 is divisible by 8.</p>
+                            <p>&therefore; 106598304 is divisible by 8.</p>
                         </li>
                     </ol>
                     <hr>
@@ -413,7 +413,7 @@
                 <div class="ProblemSolution">
                     <span class="answer">Solution: </span>
                     <p>(Sum of digits at odd places) - (Sum of digits at even places) = [(8 + 7 + 3 + 4) - (1 + 2 + 8)] = 11, which is divisible by 11.</p>
-                    <p>$\therefore$ 4832718 is divisible by 11.</p>
+                    <p>&therefore; 4832718 is divisible by 11.</p>
                     <hr>
                     <div class="srcFile">
                         <a href="example010.js" target="_blank" class="programLink">./example010.js</a>
@@ -462,7 +462,32 @@
                     </div>
                 </div>
             </div>  <!-- example -->
-            
+            <h3>Formulae</h3>
+            <ol type="i">
+                <li>$(a + b)^2 = a^2 + b^2 + 2ab$</li>
+                <li>$(a - b)^2 = a^2 + b^2 - 2ab$</li>
+                <li>$(a + b)^2 - (a - b)^2 = 4ab$</li>
+                <li>$(a + b)^2 + (a - b)^2 = 2(a^2 + b^2)$</li>
+                <li>$a^2 - b^2 = (a + b)(a - b)$</li>
+                <li>$a^3 + b^3 = (a + b)(a^2 - ab + b^2)$</li>
+                <li>$a^3 - b^3 = (a - b)(a^2 + ab + b^2)$</li>
+                <li>$a.(b + c) = ab + ac$ <i>&DoubleRightArrow; Distributive law</i></li>
+                <li>$a.(b - c) = ab - ac$ <i>&DoubleRightArrow; Distributive law</i></li>
+            </ol>
+            <div class="example">
+                <div class="ProblemDescription">
+                    <p><span class="question">Example 13: </span></p>
+                    <p>Multiply 5793405 by 99999 by short cut method.</p>
+                </div>
+                <div class="ProblemSolution">
+                    <span class="answer">Solution: </span>
+                    <div class="calculation">
+                        $5793405 \times 99999 = 5793405 \times (100000 - 1)$<br>
+                        <span class="nbsp4"></span>$= (579340500000 - 5793405)$<br>
+                        <span class="nbsp4"></span>$= (579334706595)$<br>
+                    </div>
+                </div>
+            </div>  <!-- example -->
             <h3>Supporting scripts:</h3>
             <div class="srcFile">
                 <a href="package.json" target="_blank" class="programLink">./package.json</a>
