--- a/unit15/index.html
+++ b/unit15/index.html
@@ -6,14 +6,14 @@
     <title>Chain Rule</title>
     <script>
         window.MathJax = {
-          tex: {
-            inlineMath: [['$', '$'], ['\(', '\)']], // Explicitly include $...$
-            displayMath: [['$$', '$$'], ['\[', '\]']]
-          },
-          options: {
-              skipHtmlTags: ['script', 'noscript', 'style', 'textarea', 'pre','code','annotation', 'annotation-xml'],
-              processEscapes: true
-          }
+            tex: {
+                inlineMath: [['$', '$']], // Explicitly include $...$
+                displayMath: [['$$', '$$']]
+            },
+            options: {
+                skipHtmlTags: ['script', 'noscript', 'style', 'textarea', 'pre','code','annotation', 'annotation-xml'],
+                processEscapes: true
+            }
         };
     </script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
