Unit02::example 18 completed

--- a/unit02/index.html
+++ b/unit02/index.html
@@ -488,6 +488,165 @@
                     </div>
                 </div>
             </div>  <!-- example -->
+            <div class="example">
+                <div class="ProblemDescription">
+                    <p><span class="question">Example 14: </span></p>
+                    <p>Evaluate:</p>
+                    <ol type="i">
+                        <li>$986 \times 137 + 986 \times 863$</li>
+                        <li>$983 \times 207 - 983 \times 107$</li>
+                    </ol>
+                </div>
+                <div class="ProblemSolution">
+                    <span class="answer">Solution: </span>
+                    <ol type="i">
+                        <li>
+                            <p>Using distributive law.</p>
+                            <div class="calculation">
+                                $986 \times 137 + 986 \times 863 = 986 (137 + 863)$<br>
+                                <span class="nbsp4"></span>$= 986 \times 1000 = 986000$<br>
+                            </div>
+                        </li>
+                        <li>
+                            <p>Using distributive law.</p>
+                            <div class="calculation">
+                                $983 \times 207 - 983 \times 107$<br>
+                                <span class="nbsp4"></span>$= 983 \times (207 - 107)$<br>
+                                <span class="nbsp4"></span>$= 983 \times 100 = 98300$<br>
+                            </div>
+                        </li>
+                    </ol>
+                </div>
+            </div>  <!-- example -->
+            <div class="example">
+                <div class="ProblemDescription">
+                    <p><span class="question">Example 15: </span></p>
+                    <p>Evaluate:</p>
+                    <ol type="i">
+                        <li>$\frac{527 \times 527 \times 527 + 183 \times 183 \times 183}{527 \times 527 - 527 \times 183 + 183 \times 183}$</li>
+                        <li>$\frac{458 \times 458 \times 458 - 239 \times 239 \times 239}{458 \times 458 + 458 \times 239 + 239 \times 239}$</li>
+                        <li>$\frac{{(614 + 168)}^2 - {(614 - 168)}^2}{614 \times 168}$</li>
+                        <li>$\frac{{(832 + 278)}^2 + {(832 - 278)}^2}{832 \times + 278 \times 278}$</li>
+                    </ol>
+                </div>
+                <div class="ProblemSolution">
+                    <span class="answer">Solution: </span>
+                    <ol type="i">
+                        <li>
+                            <div class="calculation">
+                                $\frac{527 \times 527 \times 527 + 183 \times 183 \times 183}{527 \times 527 - 527 \times 183 + 183 \times 183} = \frac{527^3 + 183^3}{527^2 - 527 \times 183 + 183^2}$<br>
+                                <span class="nbsp4"></span>$= \frac{a^3 + b^3}{a^2 - ab + b^2} = a + b = 527 + 183 = 710$<br>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="calculation">
+                                $\frac{458 \times 458 \times 458 - 239 \times 239 \times 239}{458 \times 458 + 458 \times 239 + 239 \times 239} = \frac{458^3 - 239^3}{458^2 + 458 \times 239 + 239^2}$<br>
+                                <span class="nbsp4"></span>$= \frac{a^3 - b^3}{a^2 + ab + b^2} = a - b = 458 - 239 = 219$<br>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="calculation">
+                                $\frac{{(614 + 168)}^2 - {(614 - 168)}^2}{614 \times 168} = \frac{{(a + b)}^2 - {(a - b)}^2}{ab} = \frac{4ab}{ab} = 4$<br>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="calculation">
+                                $\frac{{(832 + 278)}^2 + {(832 - 278)}^2}{832 \times + 278 \times 278} = \frac{{(a + b)}^2 + {(a - b)}^2}{ab} = \frac{2(a^2 + b^2)}{(a^2 + b^2)} = 2$<br>
+                            </div>
+                        </li>
+                    </ol>
+                </div>
+            </div>  <!-- example -->
+            <div class="example">
+                <div class="ProblemDescription">
+                    <p><span class="question">Example 16: </span></p>
+                    <p>Simplify:</p>
+                    <ol type="i">
+                        <li>$1605 \times 1605 = ?$</li>
+                        <li>$1398 \times 1398 = ?$</li>
+                    </ol>
+                </div>
+                <div class="ProblemSolution">
+                    <span class="answer">Solution: </span>
+                    <ol type="i">
+                        <li>
+                            <div class="calculation">
+                                $1605 \times 1605 = (1605^2)$<br>
+                                <span class="nbsp4"></span>$= (1600 + 5)^2$<br>
+                                <span class="nbsp4"></span>$= 1600^2 + 5^2 + 2 \times 1600 \times 5$<br>
+                                <span class="nbsp4"></span>$= 2560000 + 25 + 16000 = 2576025$<br>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="calculation">
+                                $1398 \times 1398 = 1398^2$<br>
+                                <span class="nbsp4"></span>$= (1400 - 2)^2$<br>
+                                <span class="nbsp4"></span>$= 1400^2 + 2^2 - 2 \times 1400 \times 2$<br>
+                                <span class="nbsp4"></span>$= 1960000 + 4 - 5600 = 1954404$<br>
+                            </div>
+                        </li>
+                    </ol>
+                </div>
+            </div>  <!-- example -->
+            <div class="example">
+                <div class="ProblemDescription">
+                    <p><span class="question">Example 17: </span></p>
+                    <p>Simplify:</p>
+                    <ol type="i">
+                        <li>$896 \times 896 - 204 \times 204 = ?$</li>
+                        <li>$57 \times 57 + 43 \times 43 + 2 \times 57 \times 43 = ?$</li>
+                        <li>$81 \times 81 + 68 \times 68 -2 \times 81 \times 68$</li>
+                    </ol>
+                </div>
+                <div class="ProblemSolution">
+                    <span class="answer">Solution: </span>
+                    <ol type="i">
+                        <li>
+                            <div class="calculation">
+                                $896 \times 896 - 204 \times 204 = 896^2 - 204^2$<br>
+                                <span class="nbsp4"></span>$= (896 + 204)(896 - 204)$<br>
+                                <span class="nbsp4"></span>$= 1100 \times 692 = 761200$<br>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="calculation">
+                                $57 \times 57 + 43 \times 43 + 2 \times 57 \times 43 = 57^2 + 43^2 + 2 \times 57 \times 43$<br>
+                            </div>
+                                <p>Resembles $(a^2 + b^2 + 2ab) = (a + b)^2$<br></p>
+                            <div class="calculation">
+                                <span class="nbsp4"></span>$= (57 + 43)^2 = 100^2 = 10000$<br>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="calculation">
+                                $81 \times 81 + 68 \times 68 -2 \times 81 \times 68 = $<br>
+                            </div>
+                            <p>Resembles $(a^2 + b^2 - 2ab) = (a - b)^2$</p>
+                            <div class="calculation">
+                                <span class="nbsp4"></span>$= (81 - 68)^2 = 13^2 = 169$<br>
+                            </div>
+                        </li>
+                    </ol>
+                </div>
+            </div>  <!-- example -->
+            <div class="example">
+                <div class="ProblemDescription">
+                    <p><span class="question">Example 18: </span></p>
+                    <p>Evaluate: $(313 \times 313 + 287 \times 287)$.</p>
+                </div>
+                <div class="ProblemSolution">
+                    <span class="answer">Solution: </span>
+                    <div class="calculation">
+                        $(313 \times 313 + 287 \times 287) = 313^2 + 287^2$<br>
+                    </div>
+                    <p>Resembles $a^2 + b^2 = \frac{1}{2}[(a + b)^2 + (a - b)^2]$</p>
+                    <div class="calculation">
+                        <span class="nbsp4"></span>$= \frac{1}{2}[(313 + 287)^2 + (313 - 287)^2]$<br>
+                        <span class="nbsp4"></span>$= \frac{1}{2}[600^2 + 26^2]$<br>
+                        <span class="nbsp4"></span>$= \frac{1}{2}[360000 + 676] = 180338$<br>
+                    </div>
+                </div>
+            </div>  <!-- example -->
             <h3>Supporting scripts:</h3>
             <div class="srcFile">
                 <a href="package.json" target="_blank" class="programLink">./package.json</a>
