Unit02::example 24 completed.
- Results on division

--- a/unit02/index.html
+++ b/unit02/index.html
@@ -647,6 +647,92 @@
                     </div>
                 </div>
             </div>  <!-- example -->
+            <h3>Results on division</h3>
+            <p><b>An important Result:</b> If we divide a given number by another number, then: </p>
+            <p>$Dividend = (Divisor \times Quotient) + Remainder$</p>
+            <div class="example">
+                <div class="ProblemDescription">
+                    <p><span class="question">Example 19: </span></p>
+                    <p>On dividing 15968 by a certain number, the quotient is 89 and the remainder is 37. Find the divisor.</p>
+                </div>
+                <div class="ProblemSolution">
+                    <span class="answer">Solution: </span>
+                    <p>$Divisor = \frac{Dividend - Remainder}{Quotient} = \frac{(15968 - 37)}{89} = 179$.</p>
+                </div>
+            </div>  <!-- example -->
+            <div class="example">
+                <div class="ProblemDescription">
+                    <p><span class="question">Example 20: </span></p>
+                    <p>What least number must be subtracted from 2000 to get a number exactly divisible by 17?</p>
+                </div>
+                <div class="ProblemSolution">
+                    <span class="answer">Solution: </span>
+                    <p>On dividing 2000 by 17, we get 11 as remainder.</p>
+                    <p>&therefore; Number to be added $= (19 - 17) = 2$.</p>
+                </div>
+            </div>  <!-- example -->
+            <div class="example">
+                <div class="ProblemDescription">
+                    <p><span class="question">Example 21: </span></p>
+                    <p>What least number must be added to 3000 to obtain a number exactly divisible by 19?</p>
+                </div>
+                <div class="ProblemSolution">
+                    <span class="answer">Solution: </span>
+                    <p>On dividing 3000 by 19, we get 17 as remainder.</p>
+                    <p>&therefore; Number to be added $= (19 - 17) = 2$.</p>
+                </div>
+            </div>  <!-- example -->
+            <div class="example">
+                <div class="ProblemDescription">
+                    <p><span class="question">Example 22: </span></p>
+                    <p>Find the number which is nearest to 3105 and exactly divisible by 21.</p>
+                </div>
+                <div class="ProblemSolution">
+                    <span class="answer">Solution: </span>
+                    <p>On dividing 3105 by 21, we get 18 as remainder.</p>
+                    <p>&therefore; Number to be added to 3105 is $(21 - 18) = 3$.</p>
+                    <p>&therefore; 3108 is the required number.</p>
+                </div>
+            </div>  <!-- example -->
+            <div class="example">
+                <div class="ProblemDescription">
+                    <p><span class="question">Example 23: </span></p>
+                    <p>A number when divided by 342 gives a remainder 47. When the same number is divided by 19, what would be the remainder?</p>
+                </div>
+                <div class="ProblemSolution">
+                    <span class="answer">Solution: </span>
+                    <p>On dividing the given number by 342, let $k$ be the quotient and 47 as remainder.</p>
+                    <p>Then,</p>
+                    <div class="calculation">
+                        $number = 342k + 47$<br>
+                        <span class="nbsp4"></span>$= (19 \times 18k + 19 \times 2 + 9) = 19(18k + 2) + 9$<br>
+                    </div>
+                    <p>&therefore; The given number when divided by 19, gives $(18k + 2)$ as quotient and 9 as remainder.</p>
+                </div>
+            </div>  <!-- example -->
+            <div class="example">
+                <div class="ProblemDescription">
+                    <p><span class="question">Example 24: </span></p>
+                    <ol type="i">
+                        <li>$? \div 147 = 29$</li>
+                        <li>$? \times 144 = 12528$</li>
+                    </ol>
+                </div>
+                <div class="ProblemSolution">
+                    <span class="answer">Solution: </span>
+                    <ol type="i">
+                        <li>
+                            $? \div 147 = 29$<br>
+                            <p>Let $\frac{x}{147} = 29$. Then, $x = (147 \times 29) = 4263$.</p>
+                            <p>&therefore; Missing number is 4263.</p>
+                        </li>
+                        <li>$? \times 144 = 12528$
+                            <p>Let $x \times 144 = 12528$. Then, $x = \frac{12528}{144} = 87$.</p>
+                        </li>
+                    </ol>
+                </div>
+            </div>  <!-- example -->
+            <!-- Supporting scripts -->
             <h3>Supporting scripts:</h3>
             <div class="srcFile">
                 <a href="package.json" target="_blank" class="programLink">./package.json</a>
